hd-62 - Open API spec for create a political party
