# src/storage/api-docs/api-docs.json
@@ -202,10 +202,6 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "required": [
-                                        "email",
-                                        "password"
-                                    ],
                                     "properties": {
                                         "data": {
                                             "description": "Returns all political parties\n\nIt is returning the political parties in pagination\nthe amount of parties per page is 20.",
@@ -320,6 +316,192 @@
                                             "type": "string",
                                             "format": "text",
                                             "example": "Permission denied."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/political-party": {
+            "post": {
+                "tags": [
+                    "Admin - Political Party"
+                ],
+                "summary": "Create a new political party",
+                "description": "Create a new political party",
+                "operationId": "createPoliticalParty",
+                "requestBody": {
+                    "description": "Fields dor the new user",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "Create a new political party",
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "CECOL"
+                                    },
+                                    "political_position_id": {
+                                        "description": "Create a new political party",
+                                        "type": "string",
+                                        "example": "CEN"
+                                    },
+                                    "name": {
+                                        "description": "Create a new political party",
+                                        "type": "string",
+                                        "example": "Partido Politico"
+                                    },
+                                    "description": {
+                                        "description": "Create a new political party",
+                                        "type": "string",
+                                        "example": "Descripción partido politico"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "List of political parties",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "description": "Create a new political party",
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "description": "Create a new political party",
+                                                        "type": "string",
+                                                        "format": "text",
+                                                        "example": "CECOL"
+                                                    },
+                                                    "name": {
+                                                        "description": "Create a new political party",
+                                                        "type": "string",
+                                                        "format": "email",
+                                                        "example": "Centro Colombia"
+                                                    },
+                                                    "description": {
+                                                        "description": "Create a new political party",
+                                                        "type": "string",
+                                                        "format": "text",
+                                                        "example": "Descripcion de centro colombia"
+                                                    },
+                                                    "political_position": {
+                                                        "description": "Create a new political party",
+                                                        "type": "array",
+                                                        "items": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "description": "Create a new political party",
+                                                                    "type": "string",
+                                                                    "example": "CEN"
+                                                                },
+                                                                "name": {
+                                                                    "description": "Create a new political party",
+                                                                    "type": "string",
+                                                                    "example": "Centro"
+                                                                },
+                                                                "description": {
+                                                                    "description": "Create a new political party",
+                                                                    "type": "string",
+                                                                    "example": "Se conoce por centro ..."
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        },
+                                                        "example": {
+                                                            "id": "CEN",
+                                                            "name": "Centro",
+                                                            "description": "Se conoce por centro ..."
+                                                        }
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": {
+                                                "id": "MIPAR",
+                                                "name": "Mi partido",
+                                                "description": "Description del partido",
+                                                "political_position": {
+                                                    "id": "CEN",
+                                                    "name": "Centro",
+                                                    "description": "Se conoce por centro ..."
+                                                }
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Create a new political party",
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "User without permission to the endpoint",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Create a new political party",
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Permission denied."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Create a new political party",
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "description": "Create a new political party",
+                                            "example": "{'field':['Error message']}"
                                         }
                                     },
                                     "type": "object"
